added snapshot, accessibility ids, ui test

--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -137,6 +137,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQs-b2-eXE" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                     <rect key="frame" x="62" y="364" width="250" height="34"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <accessibility key="accessibilityConfiguration" identifier="enterGuest"/>
                     <state key="normal" title="Enter as Guest">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
