--- a/KanjiRyokucha/CardBackView.xib
+++ b/KanjiRyokucha/CardBackView.xib
@@ -57,7 +57,7 @@
                         <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLb-1T-Akn" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                             <rect key="frame" x="166" y="283" width="277" height="50"/>
                             <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
-                            <accessibility key="accessibilityConfiguration" label="no"/>
+                            <accessibility key="accessibilityConfiguration" identifier="answerNo" label="no"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="N1M-8x-THi" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <userDefinedRuntimeAttributes>
@@ -79,7 +79,7 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3e-L7-iyw" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                             <rect key="frame" x="166" y="203" width="277" height="50"/>
                             <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
-                            <accessibility key="accessibilityConfiguration" label="yes"/>
+                            <accessibility key="accessibilityConfiguration" identifier="answerYes" label="yes"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="356-gS-WbP" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <userDefinedRuntimeAttributes>
@@ -139,6 +139,7 @@
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VNk-RQ-8Gc" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <rect key="frame" x="241" y="5" width="74" height="35"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <accessibility key="accessibilityConfiguration" identifier="options"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="RFs-Wj-SjL">
                                             <variation key="widthClass=regular" constant="44"/>
@@ -156,6 +157,7 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U9V-En-UcJ" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <rect key="frame" x="385" y="0.0" width="50" height="44"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <accessibility key="accessibilityConfiguration" identifier="backQuit"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="50" id="50p-su-Yya">
                                             <variation key="widthClass=regular" constant="60"/>
