--- a/KanjiRyokucha/SRSViewController.xib
+++ b/KanjiRyokucha/SRSViewController.xib
@@ -86,6 +86,7 @@
                             <subviews>
                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Us4-8R-olo" userLabel="dueBtn">
                                     <rect key="frame" x="0.0" y="20" width="90" height="71"/>
+                                    <accessibility key="accessibilityConfiguration" identifier="topDue"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
                                     <state key="normal" title="0"/>
                                 </button>
