--- a/KanjiRyokucha/WelcomeGuestViewController.xib
+++ b/KanjiRyokucha/WelcomeGuestViewController.xib
@@ -56,6 +56,7 @@ To exit guest mode, go to the Settings tab and logout.</string>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RxG-XF-pUW" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                     <rect key="frame" x="138" y="382" width="100" height="44"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <accessibility key="accessibilityConfiguration" identifier="startGuest"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="FzY-kt-SYz"/>
                         <constraint firstAttribute="width" constant="100" id="nFZ-tF-NBb"/>
