--- a/KanjiRyokucha/SettingsSwitchCell.xib
+++ b/KanjiRyokucha/SettingsSwitchCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="403" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="403" height="84"/>
+                <rect key="frame" x="0.0" y="0.0" width="403" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jgs-E7-a9M">
@@ -46,6 +46,7 @@
                     <constraint firstItem="DLD-pw-94K" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Ygo-cH-tI3"/>
                     <constraint firstItem="jgs-E7-a9M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="d2B-0z-zZe"/>
                     <constraint firstItem="DLD-pw-94K" firstAttribute="leading" secondItem="jgs-E7-a9M" secondAttribute="trailing" constant="10" id="eQ7-5R-T0k"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="TQK-0C-VIv" secondAttribute="bottom" constant="2.5" id="iDb-ob-ffD"/>
                     <constraint firstItem="TQK-0C-VIv" firstAttribute="width" secondItem="jgs-E7-a9M" secondAttribute="width" id="ngQ-zq-Cdz"/>
                 </constraints>
             </tableViewCellContentView>
