--- a/KanjiRyokucha/CardBackView.xib
+++ b/KanjiRyokucha/CardBackView.xib
@@ -21,13 +21,13 @@
                     <rect key="frame" x="0.0" y="0.0" width="451" height="622"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="keyword" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="59L-8V-wHH">
-                            <rect key="frame" x="8" y="8" width="435" height="27"/>
+                            <rect key="frame" x="8" y="8" width="435" height="26.333333333333336"/>
                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="寛" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFh-HD-qOr">
-                            <rect key="frame" x="8" y="43" width="120" height="142"/>
+                            <rect key="frame" x="8" y="42.333333333333329" width="120" height="141.66666666666669"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="120"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -36,7 +36,7 @@
                             </variation>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DJ2-uF-VGx">
-                            <rect key="frame" x="8" y="193" width="150" height="150"/>
+                            <rect key="frame" x="8" y="192" width="150" height="150"/>
                             <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="DJ2-uF-VGx" secondAttribute="height" multiplier="1:1" id="pAY-7t-4jY"/>
@@ -55,7 +55,7 @@
                             </variation>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLb-1T-Akn" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                            <rect key="frame" x="166" y="283" width="277" height="50"/>
+                            <rect key="frame" x="166" y="282" width="277" height="50"/>
                             <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                             <accessibility key="accessibilityConfiguration" identifier="answerNo" label="no"/>
                             <constraints>
@@ -77,7 +77,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3e-L7-iyw" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                            <rect key="frame" x="166" y="203" width="277" height="50"/>
+                            <rect key="frame" x="166" y="202" width="277" height="50"/>
                             <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                             <accessibility key="accessibilityConfiguration" identifier="answerYes" label="yes"/>
                             <constraints>
@@ -98,8 +98,19 @@
                                 <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="nLj-BX-lQ8"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5w3-fh-qbf">
+                            <rect key="frame" x="0.0" y="387" width="451" height="235"/>
+                            <accessibility key="accessibilityConfiguration" identifier="flipCard"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
+                            <state key="normal" title="flip back">
+                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="0Fb-gf-nKU"/>
+                            </connections>
+                        </button>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="SJc-5n-7rS">
-                            <rect key="frame" x="8" y="363" width="435" height="44"/>
+                            <rect key="frame" x="8" y="362" width="435" height="44"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOh-Ve-UCv" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
@@ -121,7 +132,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ovc-78-r7W" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                                    <rect key="frame" x="120" y="0.0" width="50" height="44"/>
+                                    <rect key="frame" x="120.33333333333334" y="0.0" width="50" height="44"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="1fe-NF-DAh">
@@ -137,7 +148,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VNk-RQ-8Gc" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                                    <rect key="frame" x="241" y="5" width="74" height="35"/>
+                                    <rect key="frame" x="240.66666666666669" y="4.6666666666666856" width="74.000000000000057" height="35"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <accessibility key="accessibilityConfiguration" identifier="options"/>
                                     <constraints>
@@ -178,7 +189,7 @@
                             </constraints>
                         </stackView>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tkf-lp-AZA">
-                            <rect key="frame" x="136" y="43" width="307" height="142"/>
+                            <rect key="frame" x="136" y="42.333333333333329" width="307" height="141.66666666666669"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -190,6 +201,7 @@
                         <constraint firstItem="DJ2-uF-VGx" firstAttribute="leading" secondItem="MFh-HD-qOr" secondAttribute="leading" id="5T4-bD-3Oh"/>
                         <constraint firstItem="59L-8V-wHH" firstAttribute="leading" secondItem="tdc-E5-ZX9" secondAttribute="leading" constant="8" id="5iV-Z0-fsQ"/>
                         <constraint firstItem="59L-8V-wHH" firstAttribute="top" secondItem="tdc-E5-ZX9" secondAttribute="top" constant="8" id="5ot-dx-r1c"/>
+                        <constraint firstAttribute="trailing" secondItem="5w3-fh-qbf" secondAttribute="trailing" id="Atv-pv-wqC"/>
                         <constraint firstItem="tkf-lp-AZA" firstAttribute="leading" secondItem="MFh-HD-qOr" secondAttribute="trailing" constant="8" symbolic="YES" id="AvV-f5-sxh">
                             <variation key="widthClass=regular" constant="25"/>
                         </constraint>
@@ -206,11 +218,14 @@
                         </constraint>
                         <constraint firstItem="NLb-1T-Akn" firstAttribute="leading" secondItem="R3e-L7-iyw" secondAttribute="leading" id="VLg-7w-QBx"/>
                         <constraint firstItem="tkf-lp-AZA" firstAttribute="top" secondItem="MFh-HD-qOr" secondAttribute="top" id="WlP-Ql-icf"/>
+                        <constraint firstAttribute="bottom" secondItem="5w3-fh-qbf" secondAttribute="bottom" id="Ze1-M7-JB1"/>
                         <constraint firstAttribute="trailing" secondItem="R3e-L7-iyw" secondAttribute="trailing" constant="8" id="dPe-Rz-dkd"/>
                         <constraint firstItem="R3e-L7-iyw" firstAttribute="leading" secondItem="DJ2-uF-VGx" secondAttribute="trailing" constant="8" symbolic="YES" id="dd6-fA-hW1"/>
                         <constraint firstItem="MFh-HD-qOr" firstAttribute="leading" secondItem="59L-8V-wHH" secondAttribute="leading" id="dkK-v6-EuT"/>
                         <constraint firstItem="MFh-HD-qOr" firstAttribute="top" secondItem="59L-8V-wHH" secondAttribute="bottom" constant="8" symbolic="YES" id="dqD-ho-Mfq"/>
                         <constraint firstAttribute="trailing" secondItem="NLb-1T-Akn" secondAttribute="trailing" constant="8" id="fuy-5d-sjm"/>
+                        <constraint firstItem="5w3-fh-qbf" firstAttribute="leading" secondItem="tdc-E5-ZX9" secondAttribute="leading" id="kVE-Mt-hUK"/>
+                        <constraint firstItem="5w3-fh-qbf" firstAttribute="top" secondItem="SJc-5n-7rS" secondAttribute="top" constant="25" id="mSe-L2-5gg"/>
                         <constraint firstAttribute="trailing" secondItem="59L-8V-wHH" secondAttribute="trailing" constant="8" id="qQ7-cI-g2r"/>
                         <constraint firstAttribute="trailing" secondItem="tkf-lp-AZA" secondAttribute="trailing" constant="8" id="txW-Hu-s2R"/>
                         <constraint firstItem="SJc-5n-7rS" firstAttribute="leading" secondItem="DJ2-uF-VGx" secondAttribute="leading" id="vQh-T0-gq3"/>
@@ -241,6 +256,7 @@
             <connections>
                 <outlet property="drawingImageView" destination="DJ2-uF-VGx" id="OPL-b8-XIf"/>
                 <outlet property="easyButton" destination="EOh-Ve-UCv" id="cEi-cL-rIr"/>
+                <outlet property="flipBackButton" destination="5w3-fh-qbf" id="jdY-bT-tOs"/>
                 <outlet property="hardButton" destination="Ovc-78-r7W" id="SVn-P6-dDB"/>
                 <outlet property="kanjiLabel" destination="MFh-HD-qOr" id="kza-6d-l2c"/>
                 <outlet property="keywordLabel" destination="59L-8V-wHH" id="7vN-wi-eXB"/>
