--- a/KanjiRyokucha/StudyCell.xib
+++ b/KanjiRyokucha/StudyCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,35 +16,36 @@
             <rect key="frame" x="0.0" y="0.0" width="372" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="339" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="339" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rrs-Kp-glC">
-                        <rect key="frame" x="8" y="12" width="50" height="50"/>
+                        <rect key="frame" x="8" y="20" width="50" height="36"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="Vor-UD-egn"/>
-                            <constraint firstAttribute="height" constant="50" id="gw1-lz-mqA"/>
                         </constraints>
                         <state key="normal" backgroundImage="circle"/>
                         <connections>
                             <action selector="learnedTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZNm-Az-vE6"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUy-Ix-sg6">
-                        <rect key="frame" x="70" y="14" width="261" height="46"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUy-Ix-sg6">
+                        <rect key="frame" x="70" y="12.5" width="261" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="46" id="6wF-Nq-a8F"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="U1t-FZ-Tti"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DUy-Ix-sg6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="0l9-VK-9by"/>
                     <constraint firstItem="DUy-Ix-sg6" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="70l-mm-aLe"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="DUy-Ix-sg6" secondAttribute="bottom" constant="4.5" id="FXF-PO-tYI"/>
+                    <constraint firstItem="DUy-Ix-sg6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4.5" id="O6y-RB-8nf"/>
+                    <constraint firstItem="Rrs-Kp-glC" firstAttribute="centerY" secondItem="DUy-Ix-sg6" secondAttribute="centerY" id="f5A-BG-Keo"/>
                     <constraint firstItem="DUy-Ix-sg6" firstAttribute="leading" secondItem="Rrs-Kp-glC" secondAttribute="trailing" constant="12" id="jGE-yZ-Gc4"/>
-                    <constraint firstItem="Rrs-Kp-glC" firstAttribute="centerY" secondItem="DUy-Ix-sg6" secondAttribute="centerY" id="pie-9x-CAH"/>
+                    <constraint firstItem="Rrs-Kp-glC" firstAttribute="height" relation="lessThanOrEqual" secondItem="DUy-Ix-sg6" secondAttribute="height" id="qjn-L6-xfp"/>
                     <constraint firstItem="Rrs-Kp-glC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="wka-4Q-bqx"/>
                 </constraints>
             </tableViewCellContentView>
